--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="Heads or Tails?">
+    <meta property="og:description" content="A useful coin toss/flip app for those times when you don't have a coin handy!">
+    <meta property="og:url" content="https://dandroos.github.io/heads-or-tails">
+    <meta property="og:image" content="https://dandroos.github.io/heads-or-tails/ogimage.png">
+    <meta property="og:site_name" content="Heads or Tails?">
+    <meta name="twitter:card" content="summary_large_image">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Heads or Tails?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
